Ensure equal spacing for circle and timestamp on larger screens

--- a/client/my-sites/activity/activity-log-item/style.scss
+++ b/client/my-sites/activity/activity-log-item/style.scss
@@ -62,6 +62,7 @@
 	flex-direction: column;
 	align-items: center;
 	align-self: flex-start;
+	width: 52px;
 	margin: 1px 22px 0 10px;
 	padding: 4px 0 6px;
 	background: var( --color-surface-backdrop );
